# devcontainers-odoo

./: .gitignore  README.md  odoo.conf  pyproject.toml  requirements.txt
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml
