[project]
name = "odoobrain14"
version = "0.1.0"
description = "Odoo Dev Container"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "num2words",
    "ofxparse",
    "dbfread",
    "ebaysdk",
    "firebase_admin",
    "pyOpenSSL",
    "phonenumbers",
    "openupgradelib",
    "git-aggregator",
    "copier",
    "pre-commit",
    "debugpy",
    "pydevd-odoo",
    "pylint_odoo",
    "invoke",
    "ensurepath",
    "PyYAML",
    "ruff",
    "black",
    "types-invoke",
    "openpyxl-stubs",
    "click-odoo-contrib",
    "xmltodict",
    "suds",
]
